bug fixed setMyUsername
